update image address

--- a/index.header-hero.partial.html
+++ b/index.header-hero.partial.html
@@ -1,7 +1,7 @@
 <div>
   <p>Taste our</p>
   <h1>Boutique Wines</h1>
-  <img src="img/winery-separator.svg" alt="Winery Separator" />
+  <img src="img/global/winery-separator.svg" alt="Winery Separator" />
   <p>Grown with love and respect for the California lands.</p>
   <div>
     <a href="#" class="button button--primary">Shopt Now</a>
